Content getting cuttoff on smaller screens - fix.

--- a/css/main.css
+++ b/css/main.css
@@ -2,7 +2,6 @@
 @import url('https://fonts.googleapis.com/css?family=Saira+Semi+Condensed');
 
 html, body {
-	height: 100%;
 	display: flex;
 	flex-direction: column;
 	align-items: center;
@@ -10,6 +9,7 @@ html, body {
 	background-color: #ccc;
 	color: #2c3e50;
 }
+
 
 /* **********************
 	SIMON GENERAL STYLES
